tests/parsing/extra_spaces_at_line_end_empty_line/stderr.golden
error: extra 5 spaces at line end
bus.fbd +3:1
   |
 3 |      
   | ^^^^^
